<resources>
    <string name="app_name">PUCRS QUEST</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="edit_email">E-Mail</string>
    <string name="edit_pwd">Senha</string>
    <string name="button_login">Login</string>
    <string name="button_SignUp">Criar Conta</string>
    <string name="title_activity_questionario">QuestionarioActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
